[gd_scene load_steps=31 format=3 uid="uid://clqxa3jandqww"]

[ext_resource type="Script" uid="uid://cqgu071w80p2u" path="res://entities/enemies/imp/imp.gd" id="1_gjxdk"]
[ext_resource type="Script" uid="uid://q8hcxid6pdlo" path="res://entities/components/hitbox_component.gd" id="2_7sv87"]
[ext_resource type="Texture2D" uid="uid://dtj0msbib567x" path="res://assets/0x72_DungeonTilesetII_v1.6.png" id="2_67uxi"]
[ext_resource type="Script" uid="uid://b5ytt78lwv0ea" path="res://entities/enemies/components/pathfinding_component.gd" id="3_4ldao"]
[ext_resource type="Script" uid="uid://pn8dke6g2b6b" path="res://entities/components/health_component.gd" id="3_reelf"]
[ext_resource type="Texture2D" uid="uid://b2xxl5rs2ijik" path="res://assets/progress_outline.png" id="3_xvork"]
[ext_resource type="Script" uid="uid://b2egrmqvxr0xj" path="res://entities/components/velocity_component.gd" id="5_lwvjn"]
[ext_resource type="Script" uid="uid://de543k5gbwr5b" path="res://entities/components/damage_component.gd" id="8_0mdne"]
[ext_resource type="Script" uid="uid://c7xpamyhdiymg" path="res://entities/enemies/components/health_bar_component.gd" id="9_01l7b"]
[ext_resource type="Script" uid="uid://c1dec3hnix6q1" path="res://entities/components/orientation_component.gd" id="10_d7sql"]
[ext_resource type="Script" uid="uid://4p0tbv3mot6r" path="res://entities/components/fov_component.gd" id="11_aqqfn"]
[ext_resource type="Script" uid="uid://ltuwdw82gobd" path="res://entities/enemies/components/player_tracking_component.gd" id="12_ilkfe"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7xj0l"]
size = Vector2(12, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a5yd4"]
size = Vector2(12, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t0qby"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3kp21"]
radius = 128.0

[sub_resource type="AtlasTexture" id="AtlasTexture_e4km6"]
atlas = ExtResource("2_67uxi")
region = Rect2(368, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7t724"]
atlas = ExtResource("2_67uxi")
region = Rect2(384, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_uqrcg"]
atlas = ExtResource("2_67uxi")
region = Rect2(400, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2tdgp"]
atlas = ExtResource("2_67uxi")
region = Rect2(416, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_11o3t"]
atlas = ExtResource("2_67uxi")
region = Rect2(432, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_detr0"]
atlas = ExtResource("2_67uxi")
region = Rect2(448, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_d1uy4"]
atlas = ExtResource("2_67uxi")
region = Rect2(464, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0od4d"]
atlas = ExtResource("2_67uxi")
region = Rect2(480, 64, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_d8fny"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e4km6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7t724")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uqrcg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2tdgp")
}],
"loop": true,
"name": &"idle",
"speed": 7.5
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_11o3t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_detr0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d1uy4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0od4d")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="Gradient" id="Gradient_4t4od"]
colors = PackedColorArray(0.870588, 0, 0, 1, 0.870588, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_oo7tf"]
gradient = SubResource("Gradient_4t4od")
width = 14
height = 2

[sub_resource type="Animation" id="Animation_ktsmy"]
length = 0.001

[sub_resource type="Animation" id="Animation_gdlrc"]
resource_name = "attack"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [2.08165e-12, -16.0, 24.0, 2.08165e-12]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g80g2"]
_data = {
&"RESET": SubResource("Animation_ktsmy"),
&"attack": SubResource("Animation_gdlrc")
}

[node name="Imp" type="CharacterBody2D"]
collision_layer = 4
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_gjxdk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_7xj0l")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("3_reelf")
max_health = 5

[node name="DamageComponent" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0
script = ExtResource("8_0mdne")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageComponent"]
shape = SubResource("RectangleShape2D_a5yd4")

[node name="VelocityComponent" type="Node" parent="."]
script = ExtResource("5_lwvjn")
speed = 48

[node name="HitboxComponent" type="Area2D" parent="." node_paths=PackedStringArray("health_component")]
collision_layer = 0
collision_mask = 32
script = ExtResource("2_7sv87")
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("RectangleShape2D_t0qby")

[node name="PathfindingComponent" type="NavigationAgent2D" parent="." node_paths=PackedStringArray("velocity_component")]
path_desired_distance = 4.0
target_desired_distance = 4.0
avoidance_enabled = true
radius = 8.0
script = ExtResource("3_4ldao")
velocity_component = NodePath("../VelocityComponent")

[node name="AggroRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AggroRange"]
shape = SubResource("CircleShape2D_3kp21")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, -2)
sprite_frames = SubResource("SpriteFrames_d8fny")
animation = &"idle"

[node name="HealthBarComponent" type="TextureProgressBar" parent="." node_paths=PackedStringArray("health_component")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -20.0
offset_right = 8.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
value = 50.0
texture_under = ExtResource("3_xvork")
texture_progress = SubResource("GradientTexture2D_oo7tf")
texture_progress_offset = Vector2(1, 1)
script = ExtResource("9_01l7b")
health_component = NodePath("../HealthComponent")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_g80g2")
}

[node name="OrientationComponent" type="Node2D" parent="."]
script = ExtResource("10_d7sql")

[node name="FOVComponent" type="RayCast2D" parent="." node_paths=PackedStringArray("orientation_component")]
collision_mask = 3
script = ExtResource("11_aqqfn")
orientation_component = NodePath("../OrientationComponent")
angle = 360
angle_step = 10
scan_range = 36

[node name="PlayerTrackingComponent" type="Node" parent="." node_paths=PackedStringArray("orientation_component", "velocity_component", "fov_component")]
script = ExtResource("12_ilkfe")
orientation_component = NodePath("../OrientationComponent")
velocity_component = NodePath("../VelocityComponent")
fov_component = NodePath("../FOVComponent")
